(AboutUsComponent) fix: wrong paddings

--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -1,3 +1,4 @@
 .about-us {
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
